About Us UX updates
fix subhead width globally
fix svg arrow width on page load
add responsive css for about us page
correct bio width to remain in max-width grid
add overlay interaction for bios on mobile
add css for strategic advisor section to match design

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -9,7 +9,7 @@
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/about-us" role="menuitem">About Us</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
-                <li class="nav-menu-item login"><a href="#" role="menuitem">Login<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
+                <li class="nav-menu-item login"><a href="#" role="menuitem">Login<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="User Menu">
                         <li role="presentation"><a href="http://accounts.openstax.org" role="menuitem" tabindex="-1">Account Profile</a></li>
                         <li role="presentation"><a href="/faculty-verification" role="menuitem" tabindex="-1">Request instructor access</a></li>
@@ -40,7 +40,7 @@
 
             <ul class="nav-menu main-menu">
                 <li class="nav-menu-item dropdown" role="presentation">
-                    <a href="/subjects" role="menuitem" aria-haspopup="true">Subjects<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
+                    <a href="/subjects" role="menuitem" aria-haspopup="true">Subjects<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Subjects menu">
                         <li role="presentation"><a href="/subjects" role="menuitem" tabindex="-1">All</a></li>
                         <li role="presentation"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
@@ -57,7 +57,7 @@
                     <a href="/k-12" role="menuitem">K-12</a>
                 </li>
                 <li class="nav-menu-item dropdown" role="presentation">
-                    <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
+                    <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
                         <li><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
                         <li><a href="/allies" role="menuitem" tabindex="-1">Allies</a></li>
