--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -1,28 +1,34 @@
 <style scoped>
     @import url(/app/pages/about-us/about-us.css);
 </style>
-<div class="hero">
-    <h1>About Us</h1>
-    <p class="subhead">
-        OpenStax is a nonprofit based at Rice University, and it’s our mission to
-        improve student access to education. Our first open source college
-        textbook was published in 2012 and has since scaled to more than 20 books used by
-        hundreds of thousands of students across the globe. Our adaptive learning
-        technology, designed to improve learning outcomes through personalized
-        educational paths, are currently being piloted for K-12 and college.
-        The OpenStax mission is made possible through the generous support of
-        philanthropic foundations. Through these partnerships and our alliance
-        with other educational resource companies, OpenStax is breaking down the
-        most common barriers to learning and empowering students and instructors
-        to succeed.
-    </p>
+<div class="about-us page">
+    <div class="hero">
+        <div class="boxed">
+            <h1>About Us</h1>
+            <p class="subhead">
+                OpenStax is a nonprofit based at Rice University, and it’s our mission to
+                improve student access to education. Our first open source college
+                textbook was published in 2012 and has since scaled to more than 20 books used by
+                hundreds of thousands of students across the globe. Our adaptive learning
+                technology, designed to improve learning outcomes through personalized
+                educational paths, are currently being piloted for K-12 and college.
+                The OpenStax mission is made possible through the generous support of
+                philanthropic foundations. Through these partnerships and our alliance
+                with other educational resource companies, OpenStax is breaking down the
+                most common barriers to learning and empowering students and instructors
+                to succeed.
+            </p>
+        </div>
+    </div>
+    {{{strips}}}
+    <div class="boxed">
+        <section class="our-team">
+            <h2>Our Team</h2>
+            <div class="headshots"></div>
+        </section>
+        <section class="strategic-advisors">
+            <h2>Strategic Advisors</h2>
+            <div class="headshots"></div>
+        </section>
+    </div>
 </div>
-{{{strips}}}
-<section class="our-team">
-    <h2>Our Team</h2>
-    <div class="headshots"></div>
-</section>
-<section class="strategic-advisors">
-    <h2>Strategic Advisors</h2>
-    <div class="headshots"></div>
-</section>
