--- a/src/app/pages/allies/allies.scss
+++ b/src/app/pages/allies/allies.scss
@@ -76,6 +76,10 @@ $text-dark2: rgba(0, 0, 0, 0.7);
             justify-content: center;
             width: 20rem;
 
+            &.hidden {
+                display: none;
+            }
+
             .logo-text,
             img {
                 max-height: 7.5rem;
