Add removers to popovers, change TOC to nested ordered list
Created Remover view
Used Remover view in all popovers (get this book submenus, TOC, About
Us bio)
Converted TOC to nested ordered list, so it can be numbered (current
numbering is default, not final)

--- a/src/app/components/get-this-title/get-this-title.hbs
+++ b/src/app/components/get-this-title/get-this-title.hbs
@@ -1,5 +1,6 @@
 <style scoped>
     @import url(/app/components/get-this-title/get-this-title.css);
+    @import url(/app/components/remover/remover.css);
 </style>
 <div class="get-this-title">
     <div class="submenu">
