--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -1,5 +1,6 @@
 <style scoped>
     @import url(/app/pages/about-us/about-us.css);
+    @import url(/app/components/remover/remover.css);
 </style>
 <div class="about-us page">
     <div class="hero">
