--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -10,7 +10,10 @@
                     <div class="tabs">
                         <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
                         <div class="table-of-contents hidden">
-                            <div class="box"></div>
+                            <div class="box">
+                                <div class="toc-remover"></div>
+                                <ol></ol>
+                            </div>
                         </div>
                         <a href="#resources" class="tab"><span>Instructor Resources</span></a>
                         <a href="#student-resources-section" class="tab"><span>Student Resources</span></a>
