Fix IE styling for quotes, buckets, banner overlays
Added shim for classList (using rawgit CDN)
Added margin for banner overlays
Set z-index of #main to keep elements from passing in front of menu

--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -31,6 +31,10 @@
             margin: 0;
         }
 
+        > .quote {
+            display: block;
+        }
+
         &.left {
 
             @media (min-width: 700px) {
