--- a/src/app/pages/subjects/subjects.hbs
+++ b/src/app/pages/subjects/subjects.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/subjects/subjects.css);
-    @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
+    @import url(/app/components/get-this-title/get-this-title.css);
 </style>
 <div class="subjects-page">
     <div class="container" data-manager="page-description"></div>
