--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -69,6 +69,7 @@
             .image {
                 order: 1;
                 background-image: url('/images/home/quotes/quote-right.jpg');
+                background-position: 62%;
             }
 
             > .quote {
