--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/details/details.css);
-    @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
+    @import url(/app/components/get-this-title/get-this-title.css);
 </style>
 <div class="details-page">
         <section class="container book-info">
