--- a/src/app/pages/foundation/foundation.scss
+++ b/src/app/pages/foundation/foundation.scss
@@ -79,6 +79,7 @@ $text-black2: rgba(0, 0, 0, 0.7);
 
         h2 {
             font-size: 2rem;
+            letter-spacing: -0.08rem;
         }
 
         .logo {
